<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.co.netconsulting.balancesheet.ChartActivity">

    <item
        android:id="@+id/action_barChart"
        android:orderInCategory="300"
        android:title="@string/action_barChart"
        app:showAsAction="never"
        android:onClick="showBarChart" />

    <item
        android:id="@+id/action_main"
        android:orderInCategory="100"
        android:title="@string/action_main"
        app:showAsAction="never"
        android:onClick="showMenu" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="showMenu" />
</menu>