<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--tools:context=".BarAllMonthsChart">-->
        <!--Swipe Refresh Layout -->
<!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,2">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center_horizontal"
                    android:textSize="25dp"
                    android:text="@string/overview" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_income" />

                    <TextView
                        android:id="@+id/textViewTotalIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_green_light"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:text="@string/sum_spending"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textViewTotalExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_red_light"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_savings" />

                    <TextView
                        android:id="@+id/textViewTotalSavings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_light"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_food_spending_month" />

                    <TextView
                        android:id="@+id/textViewTotalFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_light"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/average_food_spending_day_month" />

                    <TextView
                        android:id="@+id/textViewAverageTotalFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_dark"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/average_food_reserved_day" />

                    <TextView
                        android:id="@+id/textViewReservedAverageDayFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_purple"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_food_year" />

                    <TextView
                        android:id="@+id/textViewTotalYearFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_red_dark"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_income_year" />

                    <TextView
                        android:id="@+id/textViewTotalYearIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_green_dark"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_left_food_julia_month" />

                    <TextView
                        android:id="@+id/textViewSumFoodJuliaMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:text="@string/sum_left_food_bernd_month" />

                    <TextView
                        android:id="@+id/textViewSumFoodBerndMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_dark"
                        android:layout_column="2"
                        android:textSize="20dp" />
                </TableRow>

                <!--From here new TableLayout-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="#c0c0c0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center_horizontal"
                    android:textSize="25dp"
                    android:text="@string/Input" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:hint="@string/hint_income" />

                    <EditText
                        android:id="@+id/editTextIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:text="@string/zero"
                        android:textSize="20dp"
                        android:inputType="numberDecimal" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:hint="@string/hint_spending" />

                    <EditText
                        android:id="@+id/editTextSpending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:text="@string/zero"
                        android:textSize="20dp"
                        android:inputType="numberDecimal" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:hint="@string/hint_person" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:hint="@string/hint_position" />

                    <Spinner
                        android:id="@+id/spinnerPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:hint="@string/hint_location" />

                    <Spinner
                        android:id="@+id/spinnerLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:textSize="20dp"
                        android:hint="@string/hint_date" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:hint="@string/hint_date_dd_mm_yyyy"
                        android:textSize="20dp"
                        android:inputType="date" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/addButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_margin="16dp"
                            android:enabled="false"
                            app:srcCompat="@drawable/ic_baseline_add_24" />

                        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                            android:id="@+id/listButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_margin="16dp"
                            android:text="@string/button_overview_current_month"
                            app:icon="@drawable/ic_baseline_add_24" />
                    </FrameLayout>
                </TableRow>
            </TableLayout>
    </ScrollView>
<!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
</RelativeLayout>
<!--<ListView-->
<!--android:id="@+id/list_view"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content" />-->