<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textViewIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewIpAddress" />

        <EditText
            android:id="@+id/editTextIPAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="IP address"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewPort" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="5000"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewPerson" />

        <EditText
            android:id="@+id/editTextPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Person"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewMoneyLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewMoneyLeftForFoodJustForPerson" />

        <EditText
            android:id="@+id/editTextMoneyOnFoodToSpend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="How much money for food/month"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textViewDefaultPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDefaultPosition" />

        <EditText
            android:id="@+id/editTextDefaultPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Position"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewDefaultLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDefaultLocation" />

        <EditText
            android:id="@+id/editTextDefaultLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="text" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|left"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>